[metadata]
name = datalab
author = World Bank Data Lab
author_email = datalab@worldbank.org
maintainer = Gabriel Stefanini Vicente
maintainer_email = gvicente@worldbank.org
version = 0.1.0
description = An Python package example from the World Bank Data Lab
long_description = file: README.md, LICENSE
keywords = World Bank Data Lab
license = World Bank Master Community License Agreement
classifiers =
    Programming Language :: Python :: 3
    License :: World Bank Master Community License Agreement
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests>=2.28.1
    pycountry>=22.3.5

[options.packages.find]
where=src


[flake8]
exclude = venv
max-line-length = 120

# E203: whitespace before ':'
# N806: Variable in function should be lowercase
# N812: lowercase imported as non lowercase
# W503: Line break occurred before binary operator
ignore = E203, N806, N812, W503

# F401: Module imported but unused
per-file-ignores =
    __init__.py: F401
    scripts/prepare_data.py: E501

[mypy]
ignore_missing_imports = True
no_strict_optional = True